log/build_2025-03-10_19-38-37/turtlebot_dqn/stderr.log
  File "/home/asad/turtlebot0/install/turtlebot_dqn/lib/python3.10/site-packages/turtlebot_dqn/dqn_node.py", line 24
    x = self.fc Emile(x)
                ^^^^^
SyntaxError: invalid syntax

